force-app/main/default/objects/Web_Content__c.object
<CustomObject>
    <fields>
        <fullName>Location_on_Website__c</fullName>
        <formula>CASE( 
     RecordType.DeveloperName,
     &quot;Menu_Image&quot;, Parent_Item__r.Name &amp; &quot; &gt; Navigation Menu&quot;,
     &quot;Announcement_Bar&quot;, &quot;Top of All Pages&quot;,
     &quot;Normal_Web_Content&quot;, Parent_Item__r.Name  &amp; &quot; &gt; &quot; &amp; Name,
     &quot;Additional_Navigable_Content&quot;, Available_Under_Web_Content__r.Parent_Item__r.Name &amp; &quot; &gt; &quot; &amp; Available_Under_Web_Content__r.Name &amp; &quot; &gt; &quot; &amp; Name,
     &quot;Home_Page_Picture_Carrousel&quot;, 
     &quot;Home Page&quot;,
     &quot;Web_Block&quot;, 
     &quot;Home Page&quot;,
     &quot;Standard_Sidebar_Block&quot;,
     Related_to_Web_Content__r.Parent_Item__r.Name &amp; &quot; &gt; &quot; &amp; Related_to_Web_Content__r.Name &amp; &quot; &gt; Sidebar&quot;,
     &quot;Groupable&quot;, IF(Available_Under_Web_Content__r.RecordType.DeveloperName = &quot;Additional_Navigable_Content&quot;,  Available_Under_Web_Content__r.Available_Under_Web_Content__r.Parent_Item__r.Name &amp; &quot; &gt; &quot; &amp; Available_Under_Web_Content__r.Available_Under_Web_Content__r.Name &amp; &quot; &gt; &quot; &amp; Available_Under_Web_Content__r.Name &amp; &quot; &gt; &quot; &amp; Name, Available_Under_Web_Content__r.Parent_Item__r.Name &amp; &quot; &gt; &quot; &amp; Available_Under_Web_Content__r.Name &amp; &quot; &gt; &quot; &amp; Name),
     &quot;Unknown Location&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location on Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Image_Url__c</fullName>
        <label>Logo Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Main_Text__c</fullName>
        <inlineHelpText>Enter the main text for the webpage. Accepts special tokens like [site:name] and similar.
Formatting options: [Bold Underline] for titles (do not add a space/line break below) &amp; [Bold] to emphasise a word with the text.</inlineHelpText>
        <label>Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Menu_Image_Caption__c</fullName>
        <description>This field is used to show a caption on the overlay of the slideshow of the mega menu on the school sites</description>
        <inlineHelpText>Add a text to display on the slideshow of the menu image</inlineHelpText>
        <label>Menu Image Caption</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Title_English__c</fullName>
        <label>Menu Title (English)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Description_English__c</fullName>
        <label>Meta Tag Description (English)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Description__c</fullName>
        <inlineHelpText>A brief and concise summary of the record, preferably 150-160 characters. The &apos;Meta Tag Description&apos; may be used by search engines such as Google to display a snippet about the page in search results.</inlineHelpText>
        <label>Meta Tag Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Title_English__c</fullName>
        <label>Meta Tag Title (English)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meta_Tag_Title__c</fullName>
        <inlineHelpText>The meta tag title should be limited to 60 characters and will show in the browser tab when the end user access the record on the website. If this field is empty (if allowed) the node on the website will get populated by the Menu title of the record.</inlineHelpText>
        <label>Meta Tag Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Native_Map_Token__c</fullName>
        <inlineHelpText>Token = [school:native-map]
Please ensure there are no spaces in the URL</inlineHelpText>
        <label>Native Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Newly_Created__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Newly Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nick_Token__c</fullName>
        <inlineHelpText>Token = [school:nick]</inlineHelpText>
        <label>School Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Me_When_Translation_is_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Me When Translation is Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_App_Thanks_Lang_1__c</fullName>
        <description>Populates the text on the online application &apos;Thank you&apos; page in the language defined in the &apos;School Token Lang 1&apos; field. Token [school:app-thankyou].</description>
        <label>Online App Thanks Language 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Online_App_Thanks__c</fullName>
        <inlineHelpText>Populates the text on the online application &apos;Thank you&apos; page. Token [school:app-thankyou].</inlineHelpText>
        <label>Online App Thanks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Only_1_Translation_Per_Language_Allowed__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A UID for translated records. Populated via a workflow rule, ensures a unique combination of English_Parent.Id and Language__c to prevent more than one translation per language. Field names in this way to make error message more understandable.</description>
        <label>Only 1 Translation Per Language Allowed!</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>IF(
   OR(
      $RecordType.DeveloperName = &quot;Menu_Image&quot;, 
      $RecordType.DeveloperName = &quot;Announcement_Bar&quot;
      ),
   -1, 
   null
   )</defaultValue>
        <inlineHelpText>Orders items from top to bottom, left to right, from lowest number to highest. Cannot be blank and must be in the range 0-199 for Home Page Top Slideshow Images, 200-299 for other Home Page Items, 50-99 for Groupables and 0-49 for all other content types.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Item_Name__c</fullName>
        <formula>Parent_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Item</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not an &apos;EN&apos; (English) record.</errorMessage>
            <filterItems>
                <field>Group_Website__c.Language__c</field>
                <operation>equals</operation>
                <value>EN</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Group_Website__c</referenceTo>
        <relationshipLabel>Web Contents</relationshipLabel>
        <relationshipName>Web_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Menu_Link_id__c</fullName>
        <formula>Parent_Item__r.Menu_Link_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Menu Link Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Web_Content_ID__c</fullName>
        <description>Defines the 18 char ID of the related Web Content record - required by Drupal</description>
        <formula>IF( 
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;),
   CASESAFEID(English_Parent__r.Available_Under_Web_Content__c),
   CASESAFEID(Available_Under_Web_Content__c) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Web Content ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Website_ID__c</fullName>
        <description>Defines the 18 char ID of the related Website record - required by Drupal</description>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;), 
   CASESAFEID(English_Parent__r.Parent_Item__c),
   CASESAFEID(Parent_Item__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Website ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path_Alias__c</fullName>
        <inlineHelpText>OPTIONAL. Paste here the ending url path of the node on the old school website. Ex: from www.oldsite.com/curriculum/overview.asp paste &quot;curriculum/1styear/overview&quot;. No initial &quot;/&quot; no &quot;.asp&quot; or similar.</inlineHelpText>
        <label>Path Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_FB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want a teaser of the node to appear on the school fb page. Not valid for group website posts.</inlineHelpText>
        <label>Post to FB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Group_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want this record to be shown on the Group Website</inlineHelpText>
        <label>Publish on Group Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_School_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click to publish this record on your school website</inlineHelpText>
        <label>Publish on School Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruitment_Intro_English__c</fullName>
        <label>Recruitment Intro (English)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recruitment_Intro__c</fullName>
        <description>Use this field to populate the intro text on recruitment page popups</description>
        <inlineHelpText>Use this field to populate the intro text on recruitment page popups</inlineHelpText>
        <label>Recruitment Intro</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Token_Lang__c</fullName>
        <inlineHelpText>Token = [school:region]</inlineHelpText>
        <label>Region Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Token__c</fullName>
        <inlineHelpText>Token = [school:region]</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_Web_Content_Name__c</fullName>
        <formula>Related_to_Web_Content__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related to Web Content Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_Web_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the web content record which the sidebar block is related to</description>
        <label>Related to Web Content</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not an English parent record</errorMessage>
            <filterItems>
                <field>Web_Content__c.Language__c</field>
                <operation>equals</operation>
                <value>EN</value>
            </filterItems>
            <filterItems>
                <field>Web_Content__c.English_Parent__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>The related web contect record must be an English record</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Web_Content__c</referenceTo>
        <relationshipLabel>Sidebar Blocks</relationshipLabel>
        <relationshipName>Sidebar_Block</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rich_Content__c</fullName>
        <label>Rich Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>School_Address_2__c</fullName>
        <inlineHelpText>Token = [school:address-2]</inlineHelpText>
        <label>Address/Campus 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Address__c</fullName>
        <label>School Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Drupal_UID__c</fullName>
        <description>Replaces the school name field as the UID. Allows for much quicker and hassle free changes to school names in the future.</description>
        <inlineHelpText>This code should be set when the website is created and then never changed!</inlineHelpText>
        <label>School (Drupal UID)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_Drupal_UID</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Email__c</fullName>
        <label>School Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>School_List__c</fullName>
        <description>A middle step from the school override field to the school list copy field.</description>
        <formula>IF(OR(ISNULL(School_Override_Field__c), INCLUDES( School_Override_Field__c, &quot;No override&quot;)), TEXT(CreatedBy.School__c), 
IF ( INCLUDES ( School_Override_Field__c , &quot;Nanjing&quot; ), &quot;nanjing1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Marbella&quot; ), &quot;marbella1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Navarra&quot; ), &quot;navarra1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Tashkent&quot; ), &quot;tashkent1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;São Paulo&quot; ), &quot;saopaulo1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Kuala Lumpur&quot; ), &quot;kualalumpur1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Moscow&quot; ), &quot;moscow1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Manila&quot; ), &quot;manila1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Yangon&quot; ), &quot;yangon1;&quot;,null ) &amp;  
IF ( INCLUDES ( School_Override_Field__c , &quot;New York&quot; ), &quot;newyork1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Brasilia&quot; ), &quot;brasilia1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Group Site&quot; ), &quot;bsf1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 1&quot; ), &quot;Sandbox 1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 2&quot; ), &quot;Sandbox 2;&quot;,null ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to set the values from the picklist in a text array. The Schools List Copy field will copy this field. Should be hidden.</inlineHelpText>
        <label>School List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Map_2__c</fullName>
        <inlineHelpText>Token = [school:map-2]</inlineHelpText>
        <label>School Map 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Map_Language_2__c</fullName>
        <inlineHelpText>Token = [school:map-2]</inlineHelpText>
        <label>School Map Language 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Map_Token_Lang_1_school_map__c</fullName>
        <inlineHelpText>Token = [school:map]</inlineHelpText>
        <label>School Map Language 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Map_Token__c</fullName>
        <inlineHelpText>Token = [school:map]</inlineHelpText>
        <label>School Map 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <description>Needed behind the scenes only (don&apos;t add to the page layout at this time) to prevent larger changes on the Drupal side to remove multiple references to the school name. Essentially just copied the school name from the &apos;Menu Title&apos; (Name) field.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name_school_name__c</fullName>
        <inlineHelpText>Token =  [school:name]
NB. This field is indicative only and not linked to the sites. Changing this token here will have no affect on the sites unless it is also updated manually in Drupal.</inlineHelpText>
        <label>School Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Override_Count__c</fullName>
        <formula>IF(INCLUDES(School_Override_Field__c, &quot;No Override&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Nanjing&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Marbella&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Navarra&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Tashkent&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;São Paulo&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Kuala Lumpur&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Moscow&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Manila&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;New York&quot;), 1, 0) + 
IF(INCLUDES(School_Override_Field__c, &quot;Yangon&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Brasilia&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Group Site&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 1&quot;), 1, 0) +
IF(INCLUDES(School_Override_Field__c, &quot;Sandbox 2&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Override Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Override_Field__c</fullName>
        <inlineHelpText>Publish this record on the websites of the selected schools.</inlineHelpText>
        <label>School Override Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Group Site</fullName>
                </value>
                <value>
                    <fullName>Sandbox 1</fullName>
                </value>
                <value>
                    <fullName>Sandbox 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Phone__c</fullName>
        <label>School Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Profile__c</fullName>
        <label>School Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Token_Lang_1__c</fullName>
        <description>Defines the language of the translated school tokens</description>
        <label>School Language 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Web_Tags__c</fullName>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;),
   TEXT(English_Parent__r.Webpage_Layout__c),
   TEXT(Webpage_Layout__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webpage Layout for Drupal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Website__c</fullName>
        <inlineHelpText>Also controls the site URL on the global network map on the school sites</inlineHelpText>
        <label>School Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Schools_List_Copy_Text__c</fullName>
        <description>Copies the value from the &apos;Schools List Copy&apos; field for use in sharing rules (added as part of BSF-NAE split)</description>
        <label>Schools List Copy (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <formula>IF(
   CONTAINS(RecordType.DeveloperName, &quot;Translation&quot;),
   English_Parent__r.School_List__c,
   School_List__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_1_Main_Text_English__c</fullName>
        <label>Main Text (English)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_2_Header__c</fullName>
        <label>Section 2 Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_2_Main_Text__c</fullName>
        <inlineHelpText>Accepts special tokens like [site:name] to display the name of the school but also other complex tokens such as: [site:mail] [site:current-date] [site:url] [current-page:title] [current-page:url]</inlineHelpText>
        <label>Section 2 Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_3_Header__c</fullName>
        <label>Section 3 Header</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_3_Main_Text__c</fullName>
        <inlineHelpText>Accepts special tokens like [site:name] to display the name of the school but also other complex tokens such as: [site:mail] [site:current-date] [site:url] [current-page:title] [current-page:url]</inlineHelpText>
        <label>Section 3 Main Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Send_Update_Request_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by completing the &apos;Request Updated Translation&apos; custom button process, sends the relevant email notification. Value returns to unchecked once the &apos;Translation Complete&apos; button is clicked.</description>
        <label>Send Update Request Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_with_Admin_Dept_of__c</fullName>
        <description>Allows a group level employee to share the record with the content managers of a specific school. Required in cases when the web content is created at group level and later needs to be edited at school level or a specific school wants to edit a record exclusive to them that was created by someone from the group or another school.</description>
        <inlineHelpText>Only available to group level employees. Allows an individual school to manage a record that was not originally created by them.</inlineHelpText>
        <label>Share with Content Managers Of</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Share</fullName>
                    <default>true</default>
                    <label>Do Not Share</label>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sidebar_Block_Type__c</fullName>
        <label>Sidebar Block Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Booklets</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>School News</fullName>
                </value>
                <value>
                    <fullName>Visual Tour</fullName>
                </value>
                <value>
                    <fullName>Meet Our Staff</fullName>
                </value>
                <value>
                    <fullName>Job Postings</fullName>
                </value>
                <value>
                    <fullName>Testimonials</fullName>
                </value>
                <value>
                    <fullName>School Events</fullName>
                </value>
                <value>
                    <fullName>School Videos</fullName>
                </value>
                <value>
                    <fullName>Standalone Booklets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Slide_Position__c</fullName>
        <inlineHelpText>There are two Slideshows on the home page. The &apos;Top&apos; one contains images only. The &apos;Middle&apos; one is only for videos.</inlineHelpText>
        <label>Slide Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtitle_English__c</fullName>
        <label>Subtitle (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone2_Token__c</fullName>
        <inlineHelpText>Token = [school:telephone2] (clickable to call, but no formatting)
or
Token = [school:telephone2-link] (clickable to call, with hyperlink style formatting)</inlineHelpText>
        <label>Telephone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Token__c</fullName>
        <inlineHelpText>Token = [school:telephone1] (clickable to call, but no formatting)
or
Token = [school:telephone1-link] (clickable to call, with hyperlink style formatting)</inlineHelpText>
        <label>Telephone 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tools_Menu_Order__c</fullName>
        <inlineHelpText>If you have checked the option &quot;Tools Menu&quot; then this field will allow you to set the order display of this record on the Tools Menu of the website.</inlineHelpText>
        <label>Mobile Quick Link Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tools_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want to show this record as an icon in the tools menu on the school site.</inlineHelpText>
        <label>Mobile Quick Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Translation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by means of a field update on an approval process to mark records which need to have the &apos;Assigned Translator&apos; field cleared by means of a time-based workflow rule to prevent future access to the records unless specifically provided.</description>
        <label>Translation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Translation_Request_Record_Type__c</fullName>
        <formula>IF(
   AND(
       OR(
          RecordType.DeveloperName = &quot;Web_Block&quot;,
          RecordType.DeveloperName = &quot;Menu_Image&quot;,
          RecordType.DeveloperName = &quot;Home_Page_Picture_Carrousel&quot;,
          RecordType.DeveloperName = &quot;School&quot;
          ),
       OR(
          NOT(ISBLANK(Internal_Link__c)),
          NOT(ISBLANK(External_Link__c))
          )
       ),
   &quot;0126F000001hW0y&quot;,
   &quot;0126F000001hW0x&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translation Request Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Requestor_Email__c</fullName>
        <description>Populated by means of a workflow rule / field update with the email address of the user requesting the translation and used to ensure any notification that a translation is complete is returned to the original requestor</description>
        <label>Translation Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Translation_Requestor_Name__c</fullName>
        <formula>IF(
   CONTAINS(
            LEFT(Translation_Requestor_Email__c, FIND(&quot;@&quot;,Translation_Requestor_Email__c)-1),
            &quot;.&quot;
            ),
   
   LEFT(UPPER(Translation_Requestor_Email__c), 1) &amp;
   MID(Translation_Requestor_Email__c, 2, FIND(&quot;.&quot;, Translation_Requestor_Email__c)-2),

   LEFT(UPPER(Translation_Requestor_Email__c), 1) &amp;
   MID(Translation_Requestor_Email__c, 2, FIND(&quot;@&quot;, Translation_Requestor_Email__c)-2)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Translation Requestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Status__c</fullName>
        <defaultValue>IF(CONTAINS($RecordType.DeveloperName, &quot;Translation&quot;), &quot;Requested&quot;, &quot;&quot;)</defaultValue>
        <description>Populated by means of various workflow rules to define the status of the translation in the process lifecycle (Requested, Complete)</description>
        <label>Translation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Token__c</fullName>
        <inlineHelpText>Token = [school:twitter]
Please write in this field what needs to be appended to the url of the account (e.g. what comes after &apos;https://www.twitter.com/&apos;)</inlineHelpText>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>